# gradio-asr

./: README.md  app.py  hello.mulaw  pyproject.toml
examples/: wav2vec.py
tests/: test_transcription.py
